chore: update visual snapshots for `dtsanevmw/cde-2777`

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -1453,7 +1453,7 @@
    */
   .datagrid-host.datagrid-calculate-mode {
     display: block;
-    overflow-x: auto;
+    overflow-y: auto;
 
     // Hide parts of the display table not used for calculation.
     .datagrid,
