--- a/projects/angular/src/popover/tooltip/_properties.tooltip.scss
+++ b/projects/angular/src/popover/tooltip/_properties.tooltip.scss
@@ -5,6 +5,7 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 @use '../../utils/mixins';
+@use '../../layout/density' as density;
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('tooltip.properties') {
@@ -12,7 +13,7 @@
     // Usage: ../popover/tooltip/_tooltips.clarity.scss
     --clr-tooltip-background-color: #{tokens.$cds-alias-object-interaction-color-active};
     --clr-tooltip-color: #{tokens.$cds-alias-typography-color-100};
-    --clr-tooltip-border-radius: #{tokens.$cds-alias-object-border-radius-100};
+    --clr-tooltip-border-radius: #{density.$clr-base-border-radius-s};
     --clr-tooltip-font-weight: #{tokens.$cds-global-typography-body-font-weight};
   }
 }
