--- a/projects/angular/src/forms/styles/_textarea.clarity.scss
+++ b/projects/angular/src/forms/styles/_textarea.clarity.scss
@@ -15,7 +15,7 @@
   .clr-textarea-wrapper {
     white-space: nowrap;
     display: flex;
-    margin-top: density.$clr-base-layout-space-xs;
+    margin-top: density.$clr-base-gap-xs;
     .clr-validate-icon {
       margin-left: 0;
     }
