--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -68,7 +68,6 @@
       'SECONDARY-13-SB-CPT',
       (
         font-weight: forms-variables.$clr-forms-label-font-weight,
-        font-size: density.$clr-base-typography-font-size-inline,
         line-height: density.$clr-base-typography-line-height-16,
       )
     );
@@ -76,15 +75,12 @@
 
   .clr-control-container {
     display: inline-block;
-
     @include mixins.generate-typography-token(
       'SECONDARY-13-RG-EXP',
       (
-        font-size: density.$clr-base-typography-font-size-caption,
         line-height: density.$clr-base-typography-line-height-16,
       )
     );
-    line-height: 200px !important;
   }
 
   .clr-control-inline {
@@ -93,15 +89,9 @@
 
   .clr-subtext {
     display: block;
-    @include mixins.generate-typography-token(
-      'CAPTION-LG-11',
-      (
-        font-size: density.$clr-base-typography-font-size-caption,
-        line-height: density.$clr-base-typography-line-height-16,
-      )
-    );
+    @include mixins.generate-typography-token('CAPTION-LG-11');
     color: forms-variables.$clr-forms-subtext-color;
-    margin-top: density.$clr-base-layout-space-2xs;
+    margin-top: density.$clr-base-gap-xs;
 
     &.error {
       color: forms-variables.$clr-forms-invalid-text-color;
@@ -118,7 +108,7 @@
   }
 
   .clr-validate-icon {
-    @include mixins.min-equilateral(density.$clr-base-layout-space-m);
+    @include mixins.min-equilateral(density.$clr-base-icon-size-l);
     color: forms-variables.$clr-forms-invalid-color;
     fill: forms-variables.$clr-forms-invalid-color;
     display: none;
@@ -143,7 +133,7 @@
     .clr-form-control > .clr-form-control.clr-form-control-multi .clr-control-label {
       width: calc(32 * #{forms-variables.$clr-forms-baseline});
       flex-shrink: 0;
-      margin-top: tokens.$cds-global-space-3;
+      margin-top: density.$clr-base-gap-xs;
     }
     &.clr-row .clr-control-label {
       width: auto;
@@ -175,7 +165,7 @@
     }
 
     .clr-control-label {
-      margin-top: tokens.$cds-global-space-3;
+      margin-top: density.$clr-base-gap-xs;
     }
 
     .clr-form-control {
