--- a/projects/angular/src/emphasis/alert/_alert.clarity.scss
+++ b/projects/angular/src/emphasis/alert/_alert.clarity.scss
@@ -113,7 +113,7 @@
   .alert-icon-wrapper {
     display: inline-flex;
     flex: 0 0 density.$clr-base-icon-size-l;
-    padding: density.$clr-base-vertical-offset-2xs 0;
+    padding: 0;
   }
 
   .alert-item {
@@ -384,6 +384,7 @@
 
     .alert-icon-wrapper {
       flex-basis: density.$clr-base-icon-size-s;
+      padding: density.$clr-base-vertical-offset-multi-row-inline-s 0;
     }
 
     .alert-icon {
