feat(checkbox, radio): pr feedback

--- a/projects/angular/src/forms/styles/_variables.forms.scss
+++ b/projects/angular/src/forms/styles/_variables.forms.scss
@@ -88,7 +88,7 @@ $clr-forms-checkbox-disabled-mark-color: var(--clr-forms-checkbox-disabled-mark-
 $clr-forms-checkbox-label-height: #{density.$clr-base-row-height-s};
 $clr-forms-checkbox-top: calc(calc(#{$clr-forms-checkbox-label-height} - #{$clr-forms-checkbox-height}) * 0.5) !default;
 
-$clr-forms-checkbox-size: #{density.$clr-base-row-height-s};
+$clr-forms-checkbox-size: #{density.$clr-base-icon-size-l};
 $clr-forms-checkbox-padding-left: calc(#{$clr-forms-checkbox-height} + #{tokens.$cds-global-space-5});
 $clr-forms-checkbox-mark-size: calc(#{$clr-forms-checkbox-height} * 0.5);
 $clr-forms-checkbox-mark-border-size: calc(#{$clr-forms-checkbox-height} * 0.125);
