--- a/projects/angular/src/data/tree-view/_tree-view.clarity.scss
+++ b/projects/angular/src/data/tree-view/_tree-view.clarity.scss
@@ -6,6 +6,7 @@
  */
 @use 'sass:meta';
 @use '../../utils/mixins';
+@use '../../layout/density' as density;
 @use 'variables.tree-view' as tree-view-variables;
 @use '@cds/core/tokens/tokens.scss';
 
@@ -60,7 +61,6 @@
 
     & > .clr-treenode-checkbox.clr-checkbox-wrapper {
       width: 100%;
-      padding-left: tree-view-variables.$clr-tree-node-content-padding;
 
       &:first-child {
         margin-left: tree-view-variables.$clr-tree-node-touch-target;
@@ -134,8 +134,12 @@
   }
 
   .clr-treenode-checkbox input[type='checkbox'] {
-    padding: var(--clr-base-layout-space-xs) 0;
+    padding: density.$clr-base-layout-space-xs 0;
     min-height: tree-view-variables.$clr-tree-node-touch-target;
+    width: density.$clr-base-icon-size-s;
+    min-width: density.$clr-base-icon-size-s;
+    margin-left: density.$clr-base-horizontal-offset-m;
+    margin-right: density.$clr-base-gap-s;
   }
 
   .clr-treenode-content .clr-treenode-link,
