feat(modal): use density layout tokens

--- a/projects/angular/src/modal/_modal.clarity.scss
+++ b/projects/angular/src/modal/_modal.clarity.scss
@@ -86,7 +86,7 @@
     }
 
     .modal-body {
-      padding: modal-variables.$clr-modal-default-space;
+      padding: modal-variables.$clr-modal-default-gap modal-variables.$clr-modal-default-space;
     }
   }
 
@@ -221,7 +221,7 @@
         fill: modal-variables.$clr-modal-close-color;
 
         // per measurement, this results in an icon that is 24x24...
-        @include mixins.equilateral(modal-variables.$clr-modal-default-space);
+        @include mixins.equilateral(modal-variables.$clr-modal-icon-size);
       }
 
       &:hover {
