fix(alerts): pr feedback

--- a/projects/angular/src/emphasis/alert/_alert.clarity.scss
+++ b/projects/angular/src/emphasis/alert/_alert.clarity.scss
@@ -200,6 +200,7 @@
       white-space: nowrap;
       display: flex;
       align-self: center;
+      align-items: center;
 
       > {
         .alert-action,
