--- a/projects/angular/src/accordion/_accordion.clarity.scss
+++ b/projects/angular/src/accordion/_accordion.clarity.scss
@@ -9,12 +9,13 @@
 @use '../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
 @use 'variables.accordion' as accordion-variables;
+@use '../layout/density/' as density;
 @include meta.load-css('properties.accordion');
 
 @include mixins.exports('accordion.clarity') {
   .clr-accordion {
     display: block;
-    margin-bottom: tokens.$cds-global-space-9;
+    margin-bottom: density.$clr-base-vertical-offset-xl;
   }
 
   .clr-accordion-panel {
@@ -80,7 +81,7 @@
     text-align: left;
     cursor: pointer;
     color: inherit;
-    gap: tokens.$cds-global-space-5;
+    gap: density.$clr-base-horizontal-offset-m;
     @media (min-width: accordion-variables.$clr-accordion-responsive-breakpoint) {
       flex-flow: row;
     }
@@ -97,7 +98,7 @@
   }
 
   .clr-accordion-status {
-    width: tokens.$cds-global-space-11;
+    width: density.$clr-base-layout-space-xl;
     display: inline-block;
     vertical-align: top;
   }
@@ -119,7 +120,7 @@
     max-width: mixins.baselinePx(650);
 
     @media (min-width: accordion-variables.$clr-accordion-responsive-breakpoint) {
-      margin-left: mixins.baselinePx(40);
+      margin-left: density.$clr-base-layout-space-2xl;
     }
   }
 
@@ -145,7 +146,7 @@
   }
 
   .clr-accordion-inner-content {
-    padding: tokens.$cds-global-space-9;
+    padding: density.$clr-base-horizontal-offset-xl;
 
     @media (min-width: accordion-variables.$clr-accordion-responsive-breakpoint) {
       padding: tokens.$cds-global-space-8 mixins.baselinePx(54);
@@ -268,7 +269,7 @@
 
     .clr-accordion-header-button {
       align-items: center;
-      padding: #{tokens.$cds-global-space-5} #{tokens.$cds-global-space-6};
+      padding: #{density.$clr-base-vertical-offset-m} #{density.$clr-base-horizontal-offset-l};
     }
 
     .clr-accordion-content {
@@ -276,10 +277,13 @@
     }
 
     .clr-accordion-inner-content {
-      padding: tokens.$cds-global-space-5 tokens.$cds-global-space-6 tokens.$cds-global-space-5
-        tokens.$cds-global-space-11;
+      padding: density.$clr-base-vertical-offset-m density.$clr-base-horizontal-offset-l
+        density.$clr-base-vertical-offset-m
+        calc(
+          density.$clr-base-horizontal-offset-l + density.$clr-base-icon-size-s + density.$clr-base-horizontal-offset-m
+        );
       color: accordion-variables.$clr-accordion-content-color;
-      font-size: accordion-variables.$clr-accordion-content-font-size;
+      @include mixins.generate-typography-token('SECONDARY-13-RG-STD');
     }
 
     .clr-accordion-panel-disabled .clr-accordion-inner-content {
@@ -292,7 +296,8 @@
 
       cds-icon,
       clr-icon {
-        @include mixins.equilateral(tokens.$cds-global-space-7);
+        @include mixins.equilateral(density.$clr-base-icon-size-s);
+        min-width: density.$clr-base-icon-size-s;
       }
     }
   }
