feat(accordion): apply density tokens

--- a/projects/angular/src/accordion/_accordion.clarity.scss
+++ b/projects/angular/src/accordion/_accordion.clarity.scss
@@ -76,7 +76,7 @@
     flex: 1 1 0;
     width: 100%;
     border: 0;
-    padding: tokens.$cds-global-space-8;
+    padding: #{density.$clr-base-vertical-offset-m} #{density.$clr-base-horizontal-offset-l};
     background: transparent;
     text-align: left;
     cursor: pointer;
