--- a/projects/angular/src/layout/density/_variables.density.scss
+++ b/projects/angular/src/layout/density/_variables.density.scss
@@ -40,6 +40,7 @@ $clr-base-vertical-offset-s: var(--clr-base-vertical-offset-s);
 $clr-base-vertical-offset-m: var(--clr-base-vertical-offset-m);
 $clr-base-vertical-offset-l: var(--clr-base-vertical-offset-l);
 $clr-base-vertical-offset-xl: var(--clr-base-vertical-offset-xl);
+$clr-base-vertical-offset-2xl: var(--clr-base-vertical-offset-2xl);
 
 $clr-base-vertical-offset-multi-row-s: var(--clr-base-vertical-offset-multi-row-s);
 $clr-base-vertical-offset-multi-row-m: var(--clr-base-vertical-offset-multi-row-m);
@@ -54,6 +55,7 @@ $clr-base-horizontal-offset-s: var(--clr-base-horizontal-offset-s);
 $clr-base-horizontal-offset-m: var(--clr-base-horizontal-offset-m);
 $clr-base-horizontal-offset-l: var(--clr-base-horizontal-offset-l);
 $clr-base-horizontal-offset-xl: var(--clr-base-horizontal-offset-xl);
+$clr-base-horizontal-offset-2xl: var(--clr-base-horizontal-offset-2xl);
 
 $clr-base-row-height-xs: var(--clr-base-row-height-xs);
 $clr-base-row-height-s: var(--clr-base-row-height-s);
