--- a/projects/angular/src/forms/styles/_form.clarity.scss
+++ b/projects/angular/src/forms/styles/_form.clarity.scss
@@ -7,7 +7,6 @@
 @use '../../utils/mixins';
 @use '@cds/core/tokens/tokens.scss';
 @use 'variables.forms' as forms-variables;
-@use '../../layout/density' as density;
 
 @include mixins.exports('forms.wrappers') {
   .clr-form {
@@ -80,7 +79,7 @@
       fill: forms-variables.$clr-forms-invalid-color;
 
       font-size: tokens.$cds-alias-typography-font-size-3;
-      margin-left: density.$clr-base-layout-space-2xs;
+      margin-left: forms-variables.$clr-forms-baseline;
     }
   }
 }
